EXTRA_DIST=lightning.info lightning.info-1 lightning.info-2 lightning.info-3

TEXI2DVI=$(top_srcdir)/config/texi2dvi
HELP2MAN = $(top_srcdir)/config/help2man

info_TEXINFOS = lightning.texi 
EXTRA_TEXINFOS = u-lightning.texi p-lightning.texi
MOSTLYCLEANFILES = lightning.tmp

lightning_TEXINFOS = body.texi toc.texi using.texi porting.texi version.texi
u_lightning_TEXINFOS = body.texi toc.texi using.texi version.texi
p_lightning_TEXINFOS = body.texi toc.texi porting.texi version.texi

